--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,18 @@
   },
   "scripts": {
     "build": "webpack --config ./webpack.config.js",
-    "dev-server": "webpack-dev-server --hot --inline --content-base --history-api-fallback",
-    "start": "node server.js",
-    "test": "jest",
-    "test:watch": "jest --watch"
+    "dev-server":
+      "webpack-dev-server --hot --inline --content-base --history-api-fallback",
+    "start": "nodemon ./server.js --exec babel-node",
+    "test":
+      "mocha --watch --compilers js:babel-core/register --require babel-polyfill"
   },
   "keywords": [],
   "author": "Taylor Moore",
   "license": "ISC",
   "dependencies": {
     "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-2": "^6.24.1",
     "bluebird": "^3.3.4",
     "body-parser": "^1.16.0",
     "cors": "^2.8.4",
@@ -25,6 +27,7 @@
     "express": "^4.14.0",
     "express-cors": "0.0.3",
     "history": "^4.6.3",
+    "nodemon": "^1.17.3",
     "pg-promise": "^3.2.3",
     "raf": "^3.4.0",
     "react": "^16.0.0",
@@ -37,16 +40,20 @@
     "style-loader": "^0.19.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.18.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.21.0",
     "babel-loader": "^6.2.10",
     "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.16.0",
+    "chai": "^4.1.2",
+    "chai-http": "git+https://github.com/chaijs/chai-http.git#3ea4524",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-16": "^1.0.1",
     "jest": "^21.2.1",
+    "mocha": "^5.0.5",
     "node-sass": "^4.5.3",
     "react-hot-loader": "^1.3.1",
     "react-test-renderer": "^16.0.0",
@@ -57,10 +64,7 @@
     "webpack-hot-middleware": "^2.15.0"
   },
   "jest": {
-    "setupFiles": [
-      "raf/polyfill",
-      "./testConfig/setupTests.js"
-    ],
+    "setupFiles": ["raf/polyfill", "./testConfig/setupTests.js"],
     "moduleNameMapper": {
       "\\.(css|scss)$": "<rootDir>/testConfig/styleMock.js"
     }
